--- a/article-add.html
+++ b/article-add.html
@@ -73,30 +73,30 @@
             rowPad.contentEditor = tinymce.init({
     selector: '[name=content]',
     height:'500px',
-    mode : "textareas",
     plugins : 'advlist autolink link image lists charmap print preview media paste save imagetools template pagebreak hr autosave fullpage fullscreen table textcolor textpattern wordcount insertdatetime legacyoutput pageembed code bdmap',
     automatic_uploads: false,
+    relative_urls : false,
     forced_root_block: 'div',
     force_p_newlines: false,
     images_upload_url: 'postAcceptor.php',
     language: "zh_CN",
     init_instance_callback : function(editor) {
-        debugger;
         if(rowPad.row.contentBtId)
-            $.get('/bigtxt/'+rowPad.row.contentBtId+'/'+rowPad.row.contentBtId,function(res){
+            $.get(rowPad.row.contentBtId,function(res){
                 editor.setContent(res)
             })
     },
     file_picker_callback:function(callback,value,meta){
-        debugger
-        $(`<input type='file'>`).change(function(){
+        console.log('file_picker_callback')
+        $(`<input type='file'/>`).change(function(){
+            console.log('input file change')
             var target = this;
                                 if(this.files.length>0){
                                     var file = this.files[0];
                                     var fd = new FormData()
                                     fd.append('file', file);
                                     $.ajax({
-                                        url: '/upload-static-file?',
+                                        url: '/ylt/upload-file?',
                                         type: 'POST',
                                         data: fd,
                                         cache: false,
@@ -104,6 +104,7 @@
                                         contentType: false,
                                         async: true,
                                         success: function (res) {
+                                            console.log('ajax success')
                                             if (res.codeMsg)
                                                 $.messager.alert('提示',res.codeMsg)
                                             if (res.code == 0) {
@@ -147,10 +148,27 @@
 
         },
         rowAdd: function () {
+            if(tinyMCE.editors[0].contentSrc!=tinyMCE.editors[0].getContent())
+                $.ajax({
+                    type: 'post',
+                    contentType:"text/plain",
+                    url: '/ylt/upload-stream?ext=html',
+                    async:false,
+                    data: tinyMCE.editors[0].getContent() ,
+                    success: function (res) {
+                        debugger
+                        if (res.codeMsg)
+                            $.messager.alert('提示',res.codeMsg)
+                        if (res.code == 0) {
+                            rowPad.row.contentBtId=res.data.url
+                        } 
+                    }
+                })
+
             $.ajax({
                 type: 'post',
                 url: '/ylt/hospital/maintain/article-add',
-                data: Object.assign({ token: rowPad.param.token, content: tinyMCE.editors[0].getContent() }, rowPad.row),
+                data: Object.assign({ token: rowPad.param.token}, rowPad.row),
                 success: function (data) {
                     if (data.codeMsg)
                         alert(data.codeMsg)
@@ -229,7 +247,7 @@
                                var fd = new FormData()
                                fd.append('file', this.files[0]);
                                 $.ajax({
-                                    url: '/upload-static-file?',
+                                    url: '/ylt/upload-file?',
                                     type: 'POST',
                                     data: fd,
                                     cache: false,
