--- a/hospital-ad-add.html
+++ b/hospital-ad-add.html
@@ -101,9 +101,25 @@
         },
         rowAdd: function () {
             $.ajax({
+                    type: 'post',
+                    contentType:"text/plain",
+                    url: '/ylt/upload-stream?ext=html',
+                    async:false,
+                    data: rowPad.contentKindEditor.html() ,
+                    success: function (res) {
+                        debugger
+                        if (res.codeMsg)
+                            alert(data.codeMsg)
+                        if (res.code == 0) {
+                            rowPad.row.contentBtId=res.data.url
+                        } 
+                    }
+                })
+
+            $.ajax({
                 type: 'post',
                 url: '/ylt/hospital/maintain/hospital-ad-add',
-                data: Object.assign({content: rowPad.contentKindEditor.html()},rowPad.row),
+                data: Object.assign({},rowPad.row),
                 success: function (data) {
                     if (data.codeMsg)
                         alert(data.codeMsg)
@@ -240,7 +256,7 @@
                                    var fd = new FormData()
                                    fd.append('file', this.files[0]);
                                     $.ajax({
-                                        url: '/upload-static-file?',
+                                        url: '/ylt/upload-file?',
                                         type: 'POST',
                                         data: fd,
                                         cache: false,
