--- a/hospital-ad.html
+++ b/hospital-ad.html
@@ -109,7 +109,7 @@
 
                     debugger
                     if (rowPad.row.contentBtId)
-                        $.get(`/bigtxt/${rowPad.row.contentBtId}/${rowPad.row.contentBtId}?rand=${Math.random()}`, function (data) {
+                        $.get(`${rowPad.row.contentBtId}?rand=${Math.random()}`, function (data) {
                             
                             self.html(data)
                         })
@@ -118,9 +118,25 @@
         },
         rowAlter: function () {
             $.ajax({
+                    type: 'post',
+                    contentType:"text/plain",
+                    url: '/ylt/upload-stream?ext=html',
+                    async:false,
+                    data: rowPad.contentKindEditor.html() ,
+                    success: function (res) {
+                        debugger
+                        if (res.codeMsg)
+                            alert(data.codeMsg)
+                        if (res.code == 0) {
+                            rowPad.row.contentBtId=res.data.url
+                        } 
+                    }
+                })
+
+            $.ajax({
                 type: 'post',
                 url: '/ylt/hospital/maintain/hospital-ad-alter',
-                data: Object.assign({  hospitalAdId: rowPad.param.hospitalAdId, content: rowPad.contentKindEditor.html()},rowPad.row),
+                data: Object.assign({  hospitalAdId: rowPad.param.hospitalAdId},rowPad.row),
                 success: function (data) {
                     if (data.codeMsg)
                         alert(data.codeMsg)
@@ -262,7 +278,7 @@
                                    var fd = new FormData()
                                    fd.append('file', this.files[0]);
                                     $.ajax({
-                                        url: '/upload-static-file?',
+                                        url: '/ylt/upload-file?',
                                         type: 'POST',
                                         data: fd,
                                         cache: false,
