--- a/office.html
+++ b/office.html
@@ -111,7 +111,7 @@
 
                     debugger
                     if (rowPad.row.contentBtId)
-                        $.get(`/bigtxt/${rowPad.row.contentBtId}/${rowPad.row.contentBtId}?rand=${Math.random()}`, function (data) {
+                        $.get(`${rowPad.row.contentBtId}?rand=${Math.random()}`, function (data) {
                             self.html(data)
                         })
                 }
@@ -119,9 +119,25 @@
         },
         rowAlter: function () {
             $.ajax({
+                    type: 'post',
+                    contentType:"text/plain",
+                    url: '/ylt/upload-stream?ext=html',
+                    async:false,
+                    data: rowPad.contentKindEditor.html() ,
+                    success: function (res) {
+                        debugger
+                        if (res.codeMsg)
+                            alert(data.codeMsg)
+                        if (res.code == 0) {
+                            rowPad.row.contentBtId=res.data.url
+                        } 
+                    }
+                })
+
+            $.ajax({
                 type: 'post',
                 url: '/ylt/hospital/maintain/office-alter',
-                data: Object.assign({ token: rowPad.param.token, officeId: rowPad.param.officeId, content: rowPad.contentKindEditor.html() }, rowPad.row),
+                data: Object.assign({ token: rowPad.param.token, officeId: rowPad.param.officeId}, rowPad.row),
                 success: function (data) {
                     if (data.codeMsg)
                         alert(data.codeMsg)
@@ -201,7 +217,7 @@
                                var fd = new FormData()
                                fd.append('file', this.files[0]);
                                 $.ajax({
-                                    url: '/upload-static-file?',
+                                    url: '/ylt/upload-file?',
                                     type: 'POST',
                                     data: fd,
                                     cache: false,
@@ -285,7 +301,7 @@
                                var fd = new FormData()
                                fd.append('file', this.files[0]);
                                 $.ajax({
-                                    url: '/upload-static-file?',
+                                    url: '/ylt/upload-file?',
                                     type: 'POST',
                                     data: fd,
                                     cache: false,
