--- a/doctor-add.html
+++ b/doctor-add.html
@@ -206,7 +206,7 @@
                                var fd = new FormData()
                                fd.append('file', this.files[0]);
                                 $.ajax({
-                                    url: '/upload-static-file?',
+                                    url: '/ylt/upload-file?',
                                     type: 'POST',
                                     data: fd,
                                     cache: false,
