--- a/doctor.html
+++ b/doctor.html
@@ -230,7 +230,7 @@ var loginingStr = $.cookie('hospitalLogin');
                                var fd = new FormData()
                                fd.append('file', this.files[0]);
                                 $.ajax({
-                                    url: '/upload-static-file?',
+                                    url: '/ylt/upload-file?',
                                     type: 'POST',
                                     data: fd,
                                     cache: false,
