附文本编辑器更换为tinymce

--- a/article-add.html
+++ b/article-add.html
@@ -28,7 +28,7 @@
     <script src="./libs/common.js"></script>
     <link rel="stylesheet" href="./libs/common.css" />
     <script src="./libs/jquery.extend.oneall.js"></script>
-    <script charset="utf-8" src="./tinymce/tinymce.min.js"></script>
+    <script charset="utf-8" src="./libs/tinymce/tinymce.min.js"></script>
 
     <!-- <script src="/hospital/maintain/libs/common.js"></script> -->
     <!-- <link rel="stylesheet" href="/hospital-maintain/libs/common.css" /> -->
