--- a/office.html
+++ b/office.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="./libs/maintain/common.css" />
     <link  href="./libs/cropper/cropper.css" rel="stylesheet">
     <script src="./libs/cropper/cropper.js"></script>
+    <script charset="utf-8" src="./libs/tinymce/tinymce.min.js"></script>
 </head>
 
 <style>
@@ -92,38 +93,89 @@
         },
         afterPage: function () {
             $(rowPad.selector).find('[name=dg]').datagrid()
-
-            rowPad.contentKindEditor = KindEditor.create('#rowPad [name=content]', {
-                cssPath: './libs/kindeditor/plugins/code/prettify.css',
-                uploadJson: '/ylt/kindeditor/upload_json.jsp',
-                fileManagerJson: '/ylt/kindeditor/file_manager_json.jsp',
-                allowFileManager: true,
-                afterCreate: function () {
-                    var self = this;
-                    KindEditor.ctrl(document, 13, function () {
-                        self.sync();
-                        document.forms['example'].submit();
-                    });
-                    KindEditor.ctrl(self.edit.doc, 13, function () {
-                        self.sync();
-                        document.forms['example'].submit();
-                    });
-
-                    debugger
-                    if (rowPad.row.contentBtId)
-                        $.get(`${rowPad.row.contentBtId}?rand=${Math.random()}`, function (data) {
-                            self.html(data)
+                rowPad.contentEditor = tinymce.init({
+                selector: '[name=content]',
+                height:'500px',
+                plugins : 'advlist autolink link image lists charmap print preview media paste save imagetools template pagebreak hr autosave fullpage fullscreen table textcolor textpattern wordcount insertdatetime legacyoutput pageembed code bdmap',
+                automatic_uploads: false,
+                relative_urls : false,
+                forced_root_block: 'div',
+                force_p_newlines: false,
+                images_upload_url: 'postAcceptor.php',
+                language: "zh_CN",
+                init_instance_callback : function(editor) {
+                    if(rowPad.row.contentBtId)
+                        $.get(rowPad.row.contentBtId,function(res){
+                            editor.setContent(res)
                         })
-                }
-            })
+                },
+                file_picker_callback:function(callback,value,meta){
+                console.log('file_picker_callback')
+                $(`<input type='file'/>`).change(function(){
+                    console.log('input file change')
+                    var target = this;
+                    if(this.files.length>0){
+                        var file = this.files[0];
+                        var fd = new FormData()
+                        fd.append('file', file);
+                        $.ajax({
+                            url: '/ylt/upload-file?',
+                            type: 'POST',
+                            data: fd,
+                            cache: false,
+                            processData: false,
+                            contentType: false,
+                            async: true,
+                            success: function (res) {
+                                console.log('ajax success')
+                                if (res.codeMsg)
+                                    $.messager.alert('提示',res.codeMsg)
+                                if (res.code == 0) {
+                                    callback(res.data.url)
+                                    target.value=null
+                                    $(target).remove()
+                                }
+                            }
+                        })
+                    }
+                }).click()
+            
+            },
+            images_upload_handler: function (blobInfo, success, failure) {
+                debugger
+                var xhr, formData;
+
+                xhr = new XMLHttpRequest();
+                xhr.withCredentials = false;
+                xhr.open('POST', 'postAcceptor.php');
+
+                xhr.onload = function() {
+                    var json;
+                    if (xhr.status != 200) {
+                        failure('HTTP Error: ' + xhr.status);
+                        return;
+                    }
+                    json = JSON.parse(xhr.responseText);
+                    if (!json || typeof json.location != 'string') {
+                        failure('Invalid JSON: ' + xhr.responseText);
+                        return;
+                    }
+                    success(json.location);
+                };
+                formData = new FormData();
+                formData.append('file', blobInfo.blob(), blobInfo.filename());
+                xhr.send(formData);
+            }
+            });
         },
         rowAlter: function () {
+            if(tinyMCE.editors[0].contentSrc!=tinyMCE.editors[0].getContent())
             $.ajax({
                     type: 'post',
                     contentType:"text/plain",
                     url: '/ylt/upload-stream?ext=html',
                     async:false,
-                    data: rowPad.contentKindEditor.html() ,
+                    data: tinyMCE.editors[0].getContent(),
                     success: function (res) {
                         debugger
                         if (res.codeMsg)
