--- a/hospital-ad-add.html
+++ b/hospital-ad-add.html
@@ -266,6 +266,9 @@
                     },{
                         text: '科室列表',
                         value: '8'
+                    },{
+                        text: '案例列表',
+                        value: '9'
                     }],
                          iconWidth:20,
                          icons:[{
