--- a/hospital-ad.html
+++ b/hospital-ad.html
@@ -283,6 +283,9 @@
                             },{
                                 text: '科室列表',
                                 value: '8'
+                            },{
+                                text: '案例列表',
+                                value: '9'
                             }],
                              iconWidth:20,
                              icons:[{
