新增门诊模块

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
     zNodes.push({ name: '概览', _url: './overview.html' })
     zNodes.push({ name: '医院', _url: './hospitalEdit.html' })
+    zNodes.push({ name: '门诊', _url: './hospital-clinic-manage.html' })
     zNodes.push({ name: '广告', _url: './hospital-ad-manage.html' })
     zNodes.push({ name: '病员', _url: './patient-manage.html' })
     zNodes.push({ name: '文章', _url: './article-manage.html' })
