--- a/hospital-clinic-manage.html
+++ b/hospital-clinic-manage.html
@@ -93,7 +93,7 @@
                             debugger
                             if (value == '汇总：')
                                 return value;
-                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value || ''}" onclick="hospitalCommon.newTab('医院广告:${common.subOmitRight(row.name, 10)}','./hospital-clinic.html?hospitalClinicId=${row.hospitalClinicId}')">${value}</a>`;
+                            return `<a href="JavaScript:void(0)" style="width:100%;display:inline-block;height:100%;" title="${value || ''}" onclick="hospitalCommon.newTab('医院门诊:${common.subOmitRight(row.name, 10)}','./hospital-clinic.html?hospitalClinicId=${row.hospitalClinicId}')">${value}</a>`;
                         }, styler: function (value, row, index) {
                             return ``
                         }
@@ -185,7 +185,7 @@
         },
         addRow: function () {
             parent.$('#tabPad').tabs('add', {
-                title: '添加广告',
+                title: '添加门诊',
                 closable: true,
                 width: "100%",
                 content: "<iframe src='hospital-ad-clinic.html' style='width:100%;height:100%;border:none;'/>",
@@ -375,24 +375,6 @@
                      }],
                      onChange:function(newValue, oldValue){
                         rowsPad.data.queryParam.type=newValue
-                     }" />
-</span>
-<span style='display:inline-block;margin-top:5px;margin-left:5px;'>
-        <span style="">广告位:</span>
-                     <input name="place" class="easyui-combobox"
-        data-options="editable:false,panelHeight:'auto',value:'',data:[{
-            text: '首页轮播图',
-            value: '0'
-        }],
-                     iconWidth:20,
-                     icons:[{
-                         iconCls:'icon-clear',
-                         handler: function(e){
-                             $(e.data.target).combobox('setValue','');
-                         }
-                     }],
-                     onChange:function(newValue, oldValue){
-                        rowsPad.data.queryParam.place=newValue
                      }" />
 </span>
 
