--- a/patient.html
+++ b/patient.html
@@ -93,6 +93,12 @@
             
         },
         rowAlter: function () {
+            if(rowPad.row.status==4&&!rowPad.row.confirmedTime){
+                alert('请选择确认时间！')
+                return
+                // if(rowPad.row.confirmedTime==null)
+            }
+            console.log(rowPad.row.confirmedTime,rowPad.row.status)
             $.ajax({
                 type: 'post',
                 url: '/ylt/hospital/maintain/patient-alter',
